Fixed spacing for p in blogviewer

--- a/styles/Blog.module.css
+++ b/styles/Blog.module.css
@@ -52,3 +52,7 @@
   width: 100%;
   content: "";
 }
+
+.text p {
+  margin-bottom: 1rem;
+}
